[package]
name = "sqlx-mock-db-tester"
version = "0.1.0"
authors = ["Li Wei<liweilijie@gmail.com>"]
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/"
repository = "https://github.com/tyrchen/"
homepage = "https://github.com/tyrchen/"
description = """

"""
readme = "README.md"
categories = ["development-tools"]
keywords = ["sqlx", "postgres", "database", "test"]

[dependencies]
anyhow = "1.0.70"
csv = "1.2.1"
itertools = "0.10.5"
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.27.0", features = ["macros", "rt", "rt-multi-thread"] }
uuid = { version = "1.3.1", features = ["v4"] }
